# appropriations-committee-reports

./: .env.example  .gitignore  CHANGELOG.md  DATA.md  METHODOLOGY.md  README.md  pyproject.toml
data/reference/: deflators.csv  federal_accounts.csv  federal_accounts.json  report_catalog.json  subcommittees.json  (+1 more)
demo/: README.md  _make_gif.py  _template.html  overview.html  walkthrough.html
docs/: COVERAGE.md  DATA_DICTIONARY.md  DELIVERABLES.md  KNOWN_ISSUES.md  crosswalk_scoping.md  vision-model-eval-brief.md
scripts/: backfill_verification_method.py  build_house_text_deliverables.py  build_release.py  cleanup_supervisor.sh  corpus_supervisor.sh  extract_enacted.py  extract_house.py  extract_house_hybrid.py  extract_house_nemotron.py  fetch_tango_accounts.py  profile_unverified.py  recall_check.py  reconcile_audit.py  recover_indent.py  repair_corpus.py  run_corpus.py  verify_house.py  verify_house_vs_html.py
tests/: test_account_authority.py  test_account_inference.py  test_account_normalization.py  test_column_layout.py  test_comparative_house_text.py  test_comparative_senate.py  test_crosswalk.py  test_discovery.py  test_dollar_parser.py  test_enacted.py  test_fetcher_guards.py  test_indent_recovery.py  test_inflation.py  test_inline_tables.py  test_int_columns.py  test_magnitude.py  test_nemotron_parse.py  test_paren_memo.py  test_paren_nonadd.py  test_primary_artifacts.py  test_reconcile.py  test_repair.py  test_report_classifier.py  test_summary_rows.py  test_tango_crosswalk.py  test_verification.py  test_verification_tier.py  test_xlsx_writer.py
(+53 files in other folders)
