[project]
name = "approps"
version = "0.1.0"
description = "Extract line-item appropriations data from congressional committee reports into structured datasets"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE"]
authors = [
    { name = "V. David Zvenyach", email = "dave@zvenyach.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.6",
    "pandas>=2.2",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pdfplumber>=0.11",
    "anthropic>=0.42",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "thefuzz>=0.22",
    "marker-pdf>=1.10.2",
    "pypdf>=6.9.1",
    "google-genai>=1.68.0",
]

[project.scripts]
approps = "approps.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
